<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:theme="@style/TitleLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sub_title1" />

        <TextView
            android:id="@+id/sub_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubTitleLogin1"
            android:text="@string/if_you_are_new"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="14dp"

            />
        <TextView
            android:id="@+id/sub_title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_new"
            style="@style/SubTitleLogin2"
            app:layout_constraintTop_toTopOf="@id/sub_title1"
            app:layout_constraintTop_toBottomOf="@id/sub_title1"
            app:layout_constraintStart_toEndOf="@id/sub_title1"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_title1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Username"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FDCE85"
                android:inputType="textWebEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="password"
            android:layout_marginTop="12dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F1F1F1"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubTitleLogin1"
            android:text="@string/forget_password"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            />
        <TextView
            android:id="@+id/forget_pass_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            style="@style/SubTitleLogin2"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toEndOf="@id/forget_pass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_pass"
            app:cornerRadius="12dp"
            style="@style/Login"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:cornerRadius="12dp"
            style="@style/signUp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
